# send-email-with-sendgrid-and-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
