[package]
name = "send-with-sendgrid-and-rust"
version = "0.1.0"
authors = ["Matthew Setter"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
