[package]
name = "send-with-sendgrid-and-rust"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Setter"]
edition = "2018"

[dependencies]
error-chain = { version = "0.12.4" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.82" }
tokio = { version = "1", features = ["full"] }
